fixed navbar overlap

--- a/main.css
+++ b/main.css
@@ -10,10 +10,11 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	background-color: #FBFAF5;
 	/*background-color: #333;*/
-	font-size: 16px;
+	font-size: 1em;
 	line-height: 1.5;
 	overflow-x: hidden;
 }
+
 a {
  text-decoration: none;
 }
@@ -71,29 +72,29 @@ li {
 .wrapper {
 	width: 100%;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 }
 
 .section {
-	margin: 5em;
+	padding-top: 6em;
 	margin-bottom: 0;
 	flex: 1 0 40%;
 }
 
 .section-heading {
 	color: rgb(65, 65, 65);
-	font-style: italic;
-	font-size: 1.2em;
 	font-weight: bold;
+	font-size: 1.7em;
+	font-style: italic;
 	margin-bottom: 1em;
+	text-align: center;
 }
 
 
 .experience {
-	margin-top: 7em;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -188,6 +189,7 @@ li {
 	margin-bottom: 1em;
 	text-decoration: underline;
 	font-style: italic;
+	font-size: 1.5em;
 }
 
 .skill-projects {
